Custom start scripts, c2Excludes set everywhere